# sanskrit-iast

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  Makefile  Makefile.in  README  autogen.sh  compat.h  configure.ac  czech.c  czech.h  encoder.c  encoder.h  harvard-kyoto.c  harvard-kyoto.h  hindi.c  hindi.h  iast-czech.c  iast-czech.h  iast.1  iast.c  iast.h  iast.pc.in  main.c  syllable.c  syllable.h  test.c  test.sh  transcription.c  transcription.h  transliteration.c  transliteration.h  utf8.c  utf8.h  velthuis.c  velthuis.h
.github/workflows/: test.yml  tests.yml
doc/: iast.1.adoc
tests/: bg1  czech.c  czech.h  encoder.c  encoder.h  harvard-kyoto.c  harvard-kyoto.h  hindi.c  hindi.h  integration.c  integration.h  integration.sh  main.c  test.h  test.sh  transcript.c  transcript.h  translit.c  translit.h  utf8.c  utf8.h  velthuis.c  velthuis.h
tests/texts/: mandukya-upanishad.txt  rg-01001.txt
